--- a/Mobile Web/index.html
+++ b/Mobile Web/index.html
@@ -174,6 +174,59 @@
         button {
             cursor: pointer;
         }
+
+    
+        /*主体*/
+        body {
+            background-color: #f0f0f0; /* 灰色底图 */
+            margin-top: 60px; /* 避免被头部遮挡 */
+            padding: 20px;
+        }
+
+        .main-container {
+            display: flex;
+            gap: 20px;
+            height: calc(100vh - 100px); /* 减去头部和上下边距 */
+        }
+
+        .left-section-block {
+            flex: 1; /* 占三分之一 */
+            background-color: white;
+            border-radius: 15px; /* 圆滑矩形 */
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .right-section-block {
+            flex: 2; /* 占三分之二 */
+            background-color: white;
+            border-radius: 15px; /* 圆滑矩形 */
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .tab-item {
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .tab-item:hover {
+            background-color: #f5f5f5;
+        }
+
+        .tab-item.active {
+            background-color: #e0e0e0;
+        }
+
+        .content-item {
+            display: none;
+        }
+
+        .content-item.active {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -410,6 +463,49 @@
 
         // 初始化检查登录状态
         checkLoginStatus();
+        
+    </script>
+    <div class="main-container">
+        <!-- 左侧热门和关注板块 -->
+        <div class="left-section-block">
+            <div class="tab-item active" data-target="hot">热门</div>
+            <div class="tab-item" data-target="follow">关注</div>
+        </div>
+
+        <!-- 右侧内容板块 -->
+        <div class="right-section-block">
+            <div class="content-item active" id="hot">
+                这里是热门板块内容
+            </div>
+            <div class="content-item" id="follow">
+                这里是关注板块内容
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // ... existing code ...
+
+        // 切换板块逻辑
+        const tabItems = document.querySelectorAll('.tab-item');
+        tabItems.forEach((tab) => {
+            tab.addEventListener('click', () => {
+                // 移除所有 tab 的 active 类
+                tabItems.forEach((t) => t.classList.remove('active'));
+                // 给当前点击的 tab 添加 active 类
+                tab.classList.add('active');
+
+                const target = tab.dataset.target;
+                const contentItems = document.querySelectorAll('.content-item');
+                contentItems.forEach((item) => {
+                    if (item.id === target) {
+                        item.classList.add('active');
+                    } else {
+                        item.classList.remove('active');
+                    }
+                });
+            });
+        });
     </script>
 </body>
 </html>
