--- a/Mobile Web/index.html
+++ b/Mobile Web/index.html
@@ -4,230 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>极客站 数码交流</title>
-    <style>
-        /* 头部整体样式 */
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            background: #fff;
-            padding: 0 20px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            z-index: 1000;
-        }
-
-        /* 左侧更多按钮和站名容器 */
-        .left-section {
-            display: flex;
-            align-items: center;
-            margin-right: 15px;
-        }
-
-        /* 更多/关闭按钮 */
-        #toggleBtn {
-            background: none;
-            border: none;
-            font-size: 18px;
-            cursor: pointer;
-            padding: 5px 10px;
-            border-radius: 4px;
-            transition: background 0.3s;
-        }
-        #toggleBtn:hover {
-            background: #f0f0f0;
-        }
-
-        /* 极客站站名 */
-        .site-name {
-            color: purple;
-            font-size: 20px;
-            font-weight: bold;
-            margin-left: 8px;
-        }
-
-        /* 搜索框容器 */
-        .search-container {
-            flex-grow: 1; /* 占据剩余空间 */
-            margin: 0 15px;
-            max-width: 600px; /* 最大宽度限制 */
-        }
-        .search-input {
-            width: 100%;
-            height: 36px;
-            border: 1px solid #ddd;
-            border-radius: 18px;
-            padding: 0 15px;
-            font-size: 14px;
-        }
-
-        /* 右侧功能模块 */
-        .right-section {
-            display: flex;
-            align-items: center;
-            gap: 15px; /* 元素间距 */
-            margin-left: auto;
-        }
-
-        /* 发布按钮（加号） */
-        .post-btn {
-            width: 36px;
-            height: 36px;
-            background: #ff4757;
-            border: none;
-            border-radius: 50%;
-            color: white;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
-        /* 个人头像 */
-        .avatar {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        object-fit: cover; /* 保持宽高比填充整个容器 */
-        border: 2px solid #f0f0f0;
-        box-sizing: border-box; /* 确保边框包含在宽高内 */
-        margin-right: 35px; /* 新增：向左微调头像位置 */
-    }
-
-        /* 左侧展开的功能板块（初始隐藏） */
-        .menu-panel {
-            position: fixed;
-            top: 60px;
-            left: -200px; /* 初始在左侧外 */
-            width: 200px;
-            height: calc(100vh - 60px);
-            background: #fff;
-            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-            padding: 20px;
-            transition: left 0.3s;
-        }
-        .menu-panel.active {
-            left: 0; /* 展开时显示 */
-        }
-        .menu-item {
-            padding: 12px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        .menu-item:hover {
-            background: #f5f5f5;
-        }
-
-        /* 头像面板样式 */
-        .avatar-panel {
-            position: fixed;
-            top: 60px;
-            right: -200px; /* 初始在右侧外 */
-            width: 200px;
-            height: calc(100vh - 60px);
-            background: #fff;
-            box-shadow: -2px 0 5px rgba(0,0,0,0.1);
-            padding: 20px;
-            transition: right 0.3s;
-        }
-        .avatar-panel.active {
-            right: 0; /* 展开时显示 */
-        }
-        .avatar-panel-item {
-            padding: 12px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        .avatar-panel-item:hover {
-            background: #f5f5f5;
-        }
-        .login-modal, .register-modal, .edit-modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.2);
-            z-index: 1001;
-        }
-        .modal-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-            z-index: 1000;
-        }
-        input {
-            display: block;
-            margin: 10px 0;
-            padding: 5px;
-            width: 100%;
-        }
-        button {
-            cursor: pointer;
-        }
-
-    
-        /*主体*/
-        body {
-            background-color: #f0f0f0; /* 灰色底图 */
-            margin-top: 60px; /* 避免被头部遮挡 */
-            padding: 20px;
-        }
-
-        .main-container {
-            display: flex;
-            gap: 20px;
-            height: calc(100vh - 100px); /* 减去头部和上下边距 */
-        }
-
-        .left-section-block {
-            flex: 1; /* 占三分之一 */
-            background-color: white;
-            border-radius: 15px; /* 圆滑矩形 */
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .right-section-block {
-            flex: 2; /* 占三分之二 */
-            background-color: white;
-            border-radius: 15px; /* 圆滑矩形 */
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .tab-item {
-            padding: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .tab-item:hover {
-            background-color: #f5f5f5;
-        }
-
-        .tab-item.active {
-            background-color: #e0e0e0;
-        }
-
-        .content-item {
-            display: none;
-        }
-
-        .content-item.active {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="head.css">
+    <link rel="stylesheet" href="body.css">
 </head>
 <body>
     <!-- 头部导航 -->
@@ -484,8 +262,6 @@
     </div>
 
     <script>
-        // ... existing code ...
-
         // 切换板块逻辑
         const tabItems = document.querySelectorAll('.tab-item');
         tabItems.forEach((tab) => {
