--- a/Mobile Web/index.html
+++ b/Mobile Web/index.html
@@ -83,7 +83,7 @@
             <div class="tab-item active" data-target="hot">热门</div>
             <div class="tab-item" data-target="follow">关注</div>
         </div>
-
+        <script src="script.js"></script>
         <!-- 右侧内容板块 -->
         <div class="right-section-block">
             <div class="content-item active" id="hot">
